# styx

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: clipboard-sync.md  kvm-software.md  protocol.md  security.md
styx-keymap/: Cargo.toml
styx-keymap/src/: lib.rs
styx-proto/: Cargo.toml
styx-proto/src/: lib.rs  wire.rs
styx-receiver/: Cargo.toml
styx-receiver/src/: clipboard.rs  clipboard_image.rs  edge.rs  inject.rs  main.rs  transport.rs
styx-sender/: Cargo.toml
styx-sender/src/: capture.rs  clipboard.rs  evdev.rs  hyprland.rs  main.rs  transport.rs
