[package]
name = "styx-proto"
version = "0.3.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire protocol for styx software KVM"

[dependencies]
tokio = { version = "1", features = ["io-util", "net"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
