[package]
name = "styx-sender"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Styx sender -- captures input on Hyprland, sends to Mac"

[dependencies]
styx-proto = { path = "../styx-proto" }
styx-keymap = { path = "../styx-keymap" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "signal", "sync", "time", "process"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
evdev = "0.13"
libc = "0.2"
log = "0.4"
env_logger = "0.11"
toml = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
tempfile = "3"
socket2 = "0.5"
